charts/wikijs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
        - name: wikijs
          image: lscr.io/linuxserver/wikijs:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 758Mi
              cpu: 500m
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          hostPath:
            path: /mnt/tank-hd/wikijs/config
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /mnt/tank-hd/wikijs
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: core
spec:
  selector:
    app: wikijs
  ports:
    - port: 3000
      targetPort: 3000
